# rdcc

./: .gitignore  .gitmodules  README.md  pyproject.toml
components/base/: Dockerfile
components/base__25_07_0/: Dockerfile  manifest.json
components/component-base__25.07.0/: Dockerfile  manifest.json
components/cxx-llvm-18__24_07_0/: Dockerfile  manifest.json
components/cxx__llvm-18/: Dockerfile  install.sh  manifest.json
components/llvm-base__18_1_8/: manifest.json  metadata.json
components/python-313/: install.sh
components/python-313__25.07.0/: Dockerfile  install-uv.sh  install.sh  manifest.json
components/rust-nightly-240801/: manifest.json
components/rust__nightly-240801/: manifest.json
github/instructions/: project.instructions.md
src/rdcc/: __init__.py  common.py  component_info.py
