[project]
name = "rdcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chuyang Chen", email = "chuyangchen2018@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rdcc = "rdcc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
